# Ruii

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
configs/: digital_data_etl_template.yaml  end_to_end_data.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  training.yaml
joe/: __init__.py  config.py
joe/llm/: client.py  think.py
joe/persona/: __init__.py  profile.py  prompt.py
llm_engineering/: settings.py
llm_engineering/application/dataset/: generation.py
llm_engineering/application/rag/: prompt_templates.py  query_expanison.py  self_query.py
llm_engineering/domain/base/: nosql.py
llm_engineering/infrastructure/aws/deploy/: delete_sagemaker_endpoint.py
llm_engineering/infrastructure/aws/deploy/huggingface/: config.py  run.py  sagemaker_huggingface.py
llm_engineering/infrastructure/aws/roles/: create_execution_role.py  create_sagemaker_role.py
llm_engineering/model/: Readme.md  utils.py
llm_engineering/model/evaluation/: sagemaker.py
llm_engineering/model/finetuning/: sagemaker.py
llm_engineering/model/inference/: inference.py
tests/unit/: test_llm_prepare.py  test_think_stripper.py
tools/: joe.py  rag.py  run.py
